--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -4,6 +4,9 @@ FROM balenalib/%%BALENA_MACHINE_NAME%%-debian-node:${NODEJS_VERSION}-bookworm-ru
 
 # Install the necessary packages
 COPY ./build /usr/src/build
+
+# Ensure install_chromium script has executable permissions
+RUN chmod +x /usr/src/build/install_chromium
 RUN /usr/src/build/install_chromium "%%BALENA_MACHINE_NAME%%"
 
 WORKDIR /usr/src/app
